Allow the devtools socket to have no address.

Don't print an error message if the address is invalid on Android,
because Android uses UNIX domain sockets, which don't have an IP
address.

Bug: 854472
Change-Id: I169450b658fb22e036e70182dabc4e6193feacad
Reviewed-on: https://chromium-review.googlesource.com/1108754
Commit-Queue: Richard Coles <torne@chromium.org>
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570852}
Former-commit-id: f8bf19aa0fab94ddb9df9b27fbddfc17d998f4e7